feat: use path parameters and update swagger docs
