# backend/internal/api/routes/router.go
@@ -1,10 +1,10 @@
-// routes/router.go
 package routes
 
 import (
-	"github.com/gin-gonic/gin"
 	"talaria/internal/api/handlers"
 	"talaria/internal/api/middleware"
+
+	"github.com/gin-gonic/gin"
 )
 
 type Router struct {
@@ -36,8 +36,6 @@ func (rt *Router) SetupRoutes(r *gin.Engine) {
 func (rt *Router) setupPublicRoutes(r *gin.Engine) {
 	r.POST("/register", rt.authHandler.Register)
 	r.POST("/login", rt.authHandler.Login)
-	r.GET("/travels", rt.travelHandler.Travel)
-	r.GET("/activities", rt.activityHandler.Activity)
 }
 
 func (rt *Router) setupPrivateRoutes(r *gin.Engine) {
@@ -45,9 +43,11 @@ func (rt *Router) setupPrivateRoutes(r *gin.Engine) {
 	api.Use(middleware.AuthMiddleware(rt.tokenService))
 	{
 		api.GET("/user", rt.userHandler.GetUserByToken)
-		api.GET("/travels", rt.travelHandler.Travel)
-		api.POST("/travels/create", rt.travelHandler.InsertTravel)
-		api.GET("/activities", rt.activityHandler.AuthenticatedActivity)
-		api.POST("/activities/create", rt.activityHandler.InsertActivity)
+		api.GET("/travels", rt.travelHandler.GetTravels)
+		api.POST("/travels/create", rt.travelHandler.CreateTravel)
+		api.GET("/travels/:travel_id", rt.travelHandler.GetTravelByID)
+		api.GET("/travels/:travel_id/activities", rt.activityHandler.GetActivities)
+		api.POST("/travels/:travel_id/activities/create", rt.activityHandler.CreateActivity)
+		api.GET("/travels/:travel_id/activities/:activity_id", rt.activityHandler.GetActivityById)
 	}
 }
